<?xml version="1.0" encoding="utf-8"?>
<TableLayout   xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="mx.ipn.proyectoaula.MainActivity"
    android:orientation="vertical"
    >

    <TextView
        android:id="@+id/id_txttitle"
        android:text="@string/str_selecciona"

        />






    <TableRow>
        <Button
            android:id="@+id/id_exactas"
            android:text="@string/str_ce"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />

        <Button
            android:id="@+id/id_sociales"
            android:text="@string/str_cs"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            />
    </TableRow>


    <TableRow>
        <Button
            android:id="@+id/id_idiomas"
            android:text="@string/str_idi"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />


        <Button
            android:id="@+id/id_artes"
            android:text="@string/str_art"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />
    </TableRow>





    <TableRow>
        <Button
            android:id="@+id/id_buttokmod"
            android:text="@string/str_cont"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />
    </TableRow>


</TableLayout>
