<?xml version="1.0" encoding="utf-8"?>
<TableLayout   xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="mx.ipn.proyectoaula.MainActivity"
    android:orientation="vertical"
    >



    <TableRow>
        <EditText
            android:id="@+id/id_edittextnombreprof"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/str_nom"
            />
    </TableRow>


    <TableRow>
        <EditText
            android:id="@+id/id_edittextpaternoprof"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/id_edittextnombreprof"
            android:hint="@string/str_pat"

            />
    </TableRow>


    <TableRow>
        <EditText
            android:id="@+id/id_edittextmaternoprof"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/id_edittextpaternoprof"
            android:hint="@string/str_mat"

            />
    </TableRow>


    <TableRow>
        <EditText
            android:id="@+id/id_edittextcorreoprof"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/id_edittextmaternoprof"
            android:hint="@string/str_corr"

            />
    </TableRow>


    <TableRow>
        <EditText
            android:id="@+id/id_edittextcontra1prof"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/id_edittextcorreoprof"
            android:hint="@string/str_contr"

            />
    </TableRow>





    <TableRow>
        <EditText
            android:id="@+id/id_edittexttelefonoprof"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/id_edittextcedulaprof"
            android:hint="@string/str_tel"

            />
    </TableRow>


    <TableRow>
        <TextView
            android:id="@+id/id_txtarea"
            android:text="@string/str_area"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            />
        <Spinner
            android:id="@+id/id_area"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" />
    </TableRow>



    <TableRow>
        <TextView
            android:id="@+id/id_txtmateria"
            android:text="@string/str_materia"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            />
        <Spinner
            android:id="@+id/id_materia"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" />
    </TableRow>


    <TableRow>
        <TextView
            android:id="@+id/id_txtdelegacion"
            android:text="@string/str_dele"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            />
        <Spinner
            android:id="@+id/id_delegacion"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" />
    </TableRow>

    <TableRow>
        <TextView
            android:id="@+id/id_txtidentificacion"
            android:text="@string/str_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            />
        <Button
            android:id="@+id/id_examinar3"
            android:text="@string/str_ex"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/id_edittexttelefonoprof"
            />
    </TableRow>


    <TableRow>
        <TextView
            android:id="@+id/id_txtcertificado"
            android:text="@string/str_certi"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            />
        <Button
            android:id="@+id/id_examinar4"
            android:text="@string/str_ex"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/id_edittexttelefonoprof"
            />
    </TableRow>


    <TableRow>
        <Button
            android:id="@+id/id_buttokprof"
            android:text="@string/str_reg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/id_edittexttelefonoprof"
            />
    </TableRow>


</TableLayout>
