<?xml version="1.0" encoding="utf-8"?>
<TableLayout   xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="mx.ipn.proyectoaula.MainActivity"
    android:orientation="vertical"
    >



    <TableRow>
    <EditText
        android:id="@+id/id_edittextnombre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/str_nom"
        />
    </TableRow>


    <TableRow>
    <EditText
        android:id="@+id/id_edittextpaterno"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/id_edittextnombre"
        android:hint="@string/str_pat"

        />
    </TableRow>


    <TableRow>
    <EditText
        android:id="@+id/id_edittextmaterno"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/id_edittextpaterno"
        android:hint="@string/str_mat"

        />
    </TableRow>


    <TableRow>
    <EditText
        android:id="@+id/id_edittextcorreo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/id_edittextmaterno"
        android:hint="@string/str_corr"

        />
    </TableRow>


    <TableRow>
    <EditText
        android:id="@+id/id_edittextcontra1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/id_edittextcorreo"
        android:hint="@string/str_contr"

        />
    </TableRow>


    <TableRow>
    <Button
        android:id="@+id/id_buttok"
        android:text="@string/str_reg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/id_edittextcontra1"
        />
    </TableRow>


</TableLayout>
