<?xml version="1.0" encoding="utf-8"?>
<TableLayout   xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="mx.ipn.proyectoaula.MainActivity"
    android:orientation="vertical"
    >

    <TextView
        android:id="@+id/id_txttitle"
        android:text="@string/str_moda"
        />






    <TableRow>
        <EditText
            android:id="@+id/id_edittextcorreomod"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/str_corr"

            />
    </TableRow>


    <TableRow>
        <EditText
            android:id="@+id/id_edittextcontra1mod"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/str_contr"

            />
    </TableRow>


    <TableRow>
        <EditText
            android:id="@+id/id_edittextcontra2mod"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/str_confcontr"

            />
    </TableRow>


    <TableRow>
        <Button
            android:id="@+id/id_buttokmod"
            android:text="@string/str_gudat"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />
    </TableRow>


</TableLayout>
