<?xml version="1.0" encoding="utf-8"?>
<TableLayout   xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="mx.ipn.proyectoaula.MainActivity"
    android:orientation="vertical"
    >

    <TextView
        android:id="@+id/id_txttitleop"
        android:text="@string/str_seleccionaop"

        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        />

    <TableRow>

    <TextView
        android:id="@+id/id_mtop"
        android:hint="@string/str_materia"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"


        />


        <Spinner
            android:id="@+id/id_materia"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            />
    </TableRow>
    <TableRow>

    <TextView
        android:id="@+id/id_txtdelegacion"
        android:text="@string/str_dele"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/id_mtop"

        />
    <Spinner
        android:id="@+id/id_delegacion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_below="@id/id_mtop"

        /></TableRow>

    <TextView
        android:id="@+id/id_busqueda"
        android:hint="@string/str_busc"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/id_delegacion"

        />

        <RadioGroup>

        <RadioButton

            android:id="@+id/id_inst"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/str_in"
            android:layout_below="@id/id_busqueda"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            />

        <RadioButton
            android:id="@+id/id_pdoc"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/str_docente"
            android:layout_below="@id/id_inst"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            />

            <RadioButton
                android:id="@+id/id_pinf"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/str_informal"
                android:layout_below="@id/id_inst"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                />
        </RadioGroup>












</TableLayout>
