<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout   xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="mx.ipn.proyectoaula.MainActivity"
    android:orientation="vertical"
    >

    <TextView
        android:id="@+id/id_txttitle"
        android:text="@string/str_tius"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"



        />



        <Button
            android:id="@+id/id_estudiante"
            android:text="@string/str_est"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"


            />


        <Button
            android:id="@+id/id_profesional"
            android:text="@string/str_docente"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/id_estudiante"

            />


        <Button
            android:id="@+id/id_informal"
            android:text="@string/str_informal"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/id_profesional"

            />










</RelativeLayout>
