<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout   xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="mx.ipn.proyectoaula.MainActivity"
    android:orientation="vertical">


    <EditText
        android:id="@+id/id_edittextusuario"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/str_txtusuario"
        />

        />

    <EditText
        android:id="@+id/id_edittextcontra"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/id_edittextusuario"
        android:hint="@string/str_txtcontrasena"
        />

    <Button
        android:id="@+id/id_buttok"
        android:text="@string/str_btniniciar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/id_edittextcontra"
        />

</RelativeLayout>
