<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout   xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="mx.ipn.proyectoaula.MainActivity"
    android:orientation="vertical"
    >





    <TextView
        android:id="@+id/id_nb"
        android:hint="@string/str_nom"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"


        />
    <TextView
        android:id="@+id/id_nb1"
        android:text="Aqui va el nombre o los nombres"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/id_nb"



        />


    <TextView
        android:id="@+id/id_apa"
        android:hint="@string/str_pat"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/id_nb1"

        />
    <TextView
        android:id="@+id/id_apa1"
        android:text="Aqui va el apellido paterno"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/id_apa"

        />


    <TextView
        android:id="@+id/id_ama"
        android:hint="@string/str_mat"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/id_apa1"

        />
    <TextView
        android:id="@+id/id_ama1"
        android:text="Aqui va el apellido materno"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/id_ama"

        />










</RelativeLayout>
